--- a/.scribe/endpoints/01.yaml
+++ b/.scribe/endpoints/01.yaml
@@ -20,7 +20,7 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"current_page":1,"data":[{"id":1,"property_id":2,"status":1,"created_at":"2021-11-25T21:21:59.000000Z","updated_at":"2021-11-25T21:22:22.000000Z"}],"first_page_url":"http:\/\/fulcrum.test\/api\/bid?page=1","from":1,"last_page":2,"last_page_url":"http:\/\/fulcrum.test\/api\/bid?page=2","links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=1","label":"1","active":true},{"url":"http:\/\/fulcrum.test\/api\/bid?page=2","label":"2","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=2","label":"Next &raquo;","active":false}],"next_page_url":"http:\/\/fulcrum.test\/api\/bid?page=2","path":"http:\/\/fulcrum.test\/api\/bid","per_page":1,"prev_page_url":null,"to":1,"total":2}'
+        content: '{"current_page":1,"data":[{"id":1,"property_id":1,"status":1,"created_at":"2021-11-25T21:21:59.000000Z","updated_at":"2021-11-25T21:22:22.000000Z","amount":{"id":1,"price":100,"status":0,"bid_id":1,"created_at":"2021-11-25T20:55:54.000000Z","updated_at":"2021-11-25T21:19:35.000000Z"}}],"first_page_url":"http:\/\/fulcrum.test\/api\/bid?page=1","from":1,"last_page":2,"last_page_url":"http:\/\/fulcrum.test\/api\/bid?page=2","links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=1","label":"1","active":true},{"url":"http:\/\/fulcrum.test\/api\/bid?page=2","label":"2","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=2","label":"Next &raquo;","active":false}],"next_page_url":"http:\/\/fulcrum.test\/api\/bid?page=2","path":"http:\/\/fulcrum.test\/api\/bid","per_page":1,"prev_page_url":null,"to":1,"total":2}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
@@ -73,14 +73,14 @@ endpoints:
         name: id
         description: 'The ID of the bid.'
         required: true
-        example: 8
+        example: 15
         type: integer
     queryParameters: []
     bodyParameters: []
     responses:
       -
         status: 200
-        content: '{"id":1,"property_id":2,"status":1,"created_at":"2021-11-25T21:21:59.000000Z","updated_at":"2021-11-25T21:22:22.000000Z"}'
+        content: '{"id":1,"property_id":1,"status":1,"created_at":"2021-11-25T21:21:59.000000Z","updated_at":"2021-11-25T21:22:22.000000Z","amount":{"id":1,"price":100,"status":0,"bid_id":1,"created_at":"2021-11-25T20:55:54.000000Z","updated_at":"2021-11-25T21:19:35.000000Z"}}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
@@ -106,7 +106,7 @@ endpoints:
         name: id
         description: 'The ID of the bid.'
         required: true
-        example: 11
+        example: 7
         type: integer
     queryParameters: []
     bodyParameters:
@@ -140,7 +140,7 @@ endpoints:
         name: id
         description: 'The ID of the bid.'
         required: true
-        example: 7
+        example: 18
         type: integer
     queryParameters: []
     bodyParameters: []
