--- a/.scribe/endpoints.cache/01.yaml
+++ b/.scribe/endpoints.cache/01.yaml
@@ -22,12 +22,10 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"current_page":1,"data":[{"id":1,"property_id":1,"status":1,"created_at":"2021-11-25T21:21:59.000000Z","updated_at":"2021-11-25T21:22:22.000000Z","amount":{"id":1,"price":100,"status":0,"bid_id":1,"created_at":"2021-11-25T20:55:54.000000Z","updated_at":"2021-11-25T21:19:35.000000Z"}}],"first_page_url":"http:\/\/fulcrum.test\/api\/bid?page=1","from":1,"last_page":2,"last_page_url":"http:\/\/fulcrum.test\/api\/bid?page=2","links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=1","label":"1","active":true},{"url":"http:\/\/fulcrum.test\/api\/bid?page=2","label":"2","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=2","label":"Next &raquo;","active":false}],"next_page_url":"http:\/\/fulcrum.test\/api\/bid?page=2","path":"http:\/\/fulcrum.test\/api\/bid","per_page":1,"prev_page_url":null,"to":1,"total":2}'
+        content: '{"current_page":1,"data":[{"id":1,"property_id":1,"status":3,"user_id":2,"created_at":"2021-11-26T15:10:13.000000Z","updated_at":"2021-11-26T15:10:13.000000Z","amount":{"id":25,"price":3361,"status":3,"bid_id":1,"created_at":"2021-11-26T15:10:13.000000Z","updated_at":"2021-11-26T15:10:13.000000Z"}}],"first_page_url":"http:\/\/fulcrum.test\/api\/bid?page=1","from":1,"last_page":50,"last_page_url":"http:\/\/fulcrum.test\/api\/bid?page=50","links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=1","label":"1","active":true},{"url":"http:\/\/fulcrum.test\/api\/bid?page=2","label":"2","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=3","label":"3","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=4","label":"4","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=5","label":"5","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=6","label":"6","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=7","label":"7","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=8","label":"8","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=9","label":"9","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=10","label":"10","active":false},{"url":null,"label":"...","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=49","label":"49","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=50","label":"50","active":false},{"url":"http:\/\/fulcrum.test\/api\/bid?page=2","label":"Next &raquo;","active":false}],"next_page_url":"http:\/\/fulcrum.test\/api\/bid?page=2","path":"http:\/\/fulcrum.test\/api\/bid","per_page":1,"prev_page_url":null,"to":1,"total":50}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
-          x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '55'
           access-control-allow-origin: '*'
         description: null
     responseFields: []
@@ -57,6 +55,12 @@ endpoints:
         required: false
         example: 1
         type: integer
+      user_id:
+        name: user_id
+        description: 'the id of the user.'
+        required: false
+        example: 1
+        type: integer
     responses: []
     responseFields: []
   -
@@ -75,19 +79,17 @@ endpoints:
         name: id
         description: 'The ID of the bid.'
         required: true
-        example: 15
+        example: 1
         type: integer
     queryParameters: []
     bodyParameters: []
     responses:
       -
         status: 200
-        content: '{"id":1,"property_id":1,"status":1,"created_at":"2021-11-25T21:21:59.000000Z","updated_at":"2021-11-25T21:22:22.000000Z","amount":{"id":1,"price":100,"status":0,"bid_id":1,"created_at":"2021-11-25T20:55:54.000000Z","updated_at":"2021-11-25T21:19:35.000000Z"}}'
+        content: '{"id":1,"property_id":1,"status":3,"user_id":2,"created_at":"2021-11-26T15:10:13.000000Z","updated_at":"2021-11-26T15:10:13.000000Z","amount":{"id":25,"price":3361,"status":3,"bid_id":1,"created_at":"2021-11-26T15:10:13.000000Z","updated_at":"2021-11-26T15:10:13.000000Z"}}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
-          x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '54'
           access-control-allow-origin: '*'
         description: null
     responseFields: []
@@ -108,7 +110,7 @@ endpoints:
         name: id
         description: 'The ID of the bid.'
         required: true
-        example: 7
+        example: 15
         type: integer
     queryParameters: []
     bodyParameters:
@@ -121,6 +123,12 @@ endpoints:
       property_id:
         name: property_id
         description: 'the id of the property.'
+        required: false
+        example: 1
+        type: integer
+      user_id:
+        name: user_id
+        description: 'the id of the user.'
         required: false
         example: 1
         type: integer
@@ -142,7 +150,7 @@ endpoints:
         name: id
         description: 'The ID of the bid.'
         required: true
-        example: 18
+        example: 19
         type: integer
     queryParameters: []
     bodyParameters: []
