--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -20,12 +20,10 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"current_page":1,"data":[{"id":1,"price":100,"status":0,"bid_id":1,"created_at":"2021-11-25T20:55:54.000000Z","updated_at":"2021-11-25T21:19:35.000000Z"}],"first_page_url":"http:\/\/fulcrum.test\/api\/amount?page=1","from":1,"last_page":2,"last_page_url":"http:\/\/fulcrum.test\/api\/amount?page=2","links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=1","label":"1","active":true},{"url":"http:\/\/fulcrum.test\/api\/amount?page=2","label":"2","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=2","label":"Next &raquo;","active":false}],"next_page_url":"http:\/\/fulcrum.test\/api\/amount?page=2","path":"http:\/\/fulcrum.test\/api\/amount","per_page":1,"prev_page_url":null,"to":1,"total":2}'
+        content: '{"current_page":1,"data":[{"id":1,"price":889,"status":2,"bid_id":12,"created_at":"2021-11-26T15:10:13.000000Z","updated_at":"2021-11-26T15:10:13.000000Z"}],"first_page_url":"http:\/\/fulcrum.test\/api\/amount?page=1","from":1,"last_page":50,"last_page_url":"http:\/\/fulcrum.test\/api\/amount?page=50","links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=1","label":"1","active":true},{"url":"http:\/\/fulcrum.test\/api\/amount?page=2","label":"2","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=3","label":"3","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=4","label":"4","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=5","label":"5","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=6","label":"6","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=7","label":"7","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=8","label":"8","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=9","label":"9","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=10","label":"10","active":false},{"url":null,"label":"...","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=49","label":"49","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=50","label":"50","active":false},{"url":"http:\/\/fulcrum.test\/api\/amount?page=2","label":"Next &raquo;","active":false}],"next_page_url":"http:\/\/fulcrum.test\/api\/amount?page=2","path":"http:\/\/fulcrum.test\/api\/amount","per_page":1,"prev_page_url":null,"to":1,"total":50}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
-          x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '53'
           access-control-allow-origin: '*'
         description: null
     responseFields: []
@@ -79,19 +77,17 @@ endpoints:
         name: id
         description: 'The ID of the amount.'
         required: true
-        example: 10
+        example: 15
         type: integer
     queryParameters: []
     bodyParameters: []
     responses:
       -
         status: 200
-        content: '{"id":1,"price":100,"status":0,"bid_id":1,"created_at":"2021-11-25T20:55:54.000000Z","updated_at":"2021-11-25T21:19:35.000000Z"}'
+        content: '{"id":1,"price":889,"status":2,"bid_id":12,"created_at":"2021-11-26T15:10:13.000000Z","updated_at":"2021-11-26T15:10:13.000000Z"}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
-          x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '52'
           access-control-allow-origin: '*'
         description: null
     responseFields: []
@@ -112,7 +108,7 @@ endpoints:
         name: id
         description: 'The ID of the amount.'
         required: true
-        example: 15
+        example: 4
         type: integer
     queryParameters: []
     bodyParameters:
@@ -152,7 +148,7 @@ endpoints:
         name: id
         description: 'The ID of the amount.'
         required: true
-        example: 19
+        example: 15
         type: integer
     queryParameters: []
     bodyParameters: []
