--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:7T0GYm0wNVwAPYRqlQMBDxwCzAZtO3AFJX6viDMCQww=
 APP_DEBUG=true
-APP_URL=http://fulcrum.test
+APP_URL=http://127.0.0.1:8081/property/7
+APP_PORT=8081
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
